fix: 将原先的 tag 规范化了